--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="">
+<html lang="pt-br" class="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,15 @@
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-svgs">
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="./src/main.js" defer></script>
 </head>
 <body>
     <div class="app">
-    <!-- <button id="toggleMode">
-        <span>Ativar/Desativar Light Mode</span>
+    <button id="toggleMode">
+        <!-- <span>Ativar/Desativar Light Mode</span> -->
         <i class="ph-bold ph-sun"></i>
         <i class="ph-bold ph-moon"></i>
-    </button> -->
+    </button>
     <section id="timer" class="flex">
         <span id="minutes">00</span>
         <span>:</span>
