--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </section>
 
      <section id="controls" class="flex">
-        <button class="ph ph-play-circle"></button>
-        <button class="ph ph-pause-circle"></button>
-        <button class="ph ph-timer secondary"></button>
-        <button class="ph ph-stop-circle secondary"></button>
-        <button class="ph ph-speaker-none secondary"></button>
-        <button class="ph ph-speaker-high"></button>
+        <button class="ph ph-play-circle" data-action="toggleRunning"></button>
+        <button class="ph ph-pause-circle" data-action="toggleRunning"></button>
+        <button class="ph ph-timer secondary" data-action="set"></button>
+        <button class="ph ph-stop-circle secondary" data-action="stop"></button>
+        <button class="ph ph-speaker-none secondary" data-action="toggleMusic"></button>
+        <button class="ph ph-speaker-high" data-action="toggleMusic"></button>
     </section>
     </div>
 </body>
