--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button class="ph ph-timer secondary" data-action="set">
           <span class="srOnly">Ajustar contador</span>
         </button>
-        <button class="ph ph-stop-circle secondary" data-action="stop">
+        <button class="ph ph-stop-circle secondary" data-action="reset">
           <span class="srOnly">Reiniciar contador</span>
         </button>
         <button class="ph ph-speaker-none secondary" data-action="toggleMusic">
